<resources>
    <string name="app_name">MisiMusic</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="miss_the_girl">Miss The Girl</string>
    <string name="the_creatures">The Creatures</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="tags">Tags</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="favorites">Favorites</string>
    <string name="play_icon">play icon</string>
    <string name="plus_icon">plus icon</string>
    <string name="picture_of_an_album_cover">picture of an album cover</string>
</resources>
